Fix padding from overflow scroll state

--- a/components/core/coinGecko/coinMarket/coinsList.module.css
+++ b/components/core/coinGecko/coinMarket/coinsList.module.css
@@ -1,5 +1,10 @@
 .allCoins_container_main {
-  overflow: scroll;
+  display: flex;
+  flex-direction: column;
+}
+
+.allCoins_container_scroll {
+  overflow: auto;
   background: #FFFFFF;
   border-radius: 16px;
 }
@@ -54,7 +59,6 @@
 }
 
 .allCoins_group {
-  border-right: 0.1rem solid #eceff1;
   border-bottom: 0.1rem solid #eceff1;
   border-left: 0.1rem solid #eceff1;
 }
